# constructive_solid_geometry_for_mc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci-python.yml
.new_env/: pyvenv.cfg
examples/: usage_in_python.py  usage_in_python_cube.py
examples/python/: plot_comparison_cylinders.py  plot_comparison_sphere_box.py  plot_id_map_comparison.py  simple_plot_examples.py  usage_in_python_cube.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
src/: bounding_box.rs  cell.rs  cell_python.rs  geometry.rs  geometry_python.rs  lib.rs  main.rs  print_errors.rs  region.rs  region_python.rs  surface.rs  surface_python.rs
tests/: test_basic_geometry.py  test_bounding_box.py  test_cell.py  test_geometry.py  test_geometry_agreement.py  test_geometry_agreement_fixed.py  test_grid_utility.py  test_surface.py  test_surface_distance.py  test_voxel_agreement.py
