[dependencies]
materials_for_mc = "0.2.0"
pyo3 = { version = "0.19", features = ["extension-module"], optional = true  }
[package]
name = "constructive_solid_geometry_for_mc"
version = "0.1.0"
edition = "2021"
description = "Material builder for Monte Carlo simulations"
license = "MIT"

[lib]
name = "constructive_solid_geometry_for_mc"
crate-type = ["cdylib", "rlib"]
# Keep the path the same
path = "src/lib.rs"



# Optional: for building wheels
[package.metadata.maturin]
python-source = "python"

[features]
# Define the pyo3 feature
default = []
pyo3 = ["dep:pyo3"]